changed travis yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,21 @@ services:
 
 before_install:
   - docker build -t meghpatel0607/react-test -f ./client/Dockerfile.dev ./client
+
+script:
+  - docker run meghpatel0607/react-test npm test -- --coverage
+
+after_success:
+  - docker build -t meghpatel0607/multi-client ./client
+  - docker build -t meghpatel0607/multi-nginx ./nginx
+  - docker build -t meghpatel0607/multi-server ./server
+  - docker build -t meghpatel0607/multi-worker ./worker
+  # Login to the Docker CLI
+  -echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  # Take those images and push them to the docker hub
+  -docker push meghpatel0607/multi-client
+  -docker push meghpatel0607/multi-nginx
+  -docker push meghpatel0607/multi-server
+  -docker push meghpatel0607/multi-worker
   
+
